--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -22,6 +22,7 @@
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
           <% end %>
           <td id="favorite_buttons_<%= @book.id %>"><%= render 'favorites/favorite', book: @book %></td>
+          <td><p class="view-count">閲覧数：<%= @book.view_counts.count %></p></td>
         </tr>
       </table>
       <div>
