--- a/app/views/relationships/_follower.html.erb
+++ b/app/views/relationships/_follower.html.erb
@@ -16,7 +16,12 @@
     </th>
   </tr>
   <% if current_user.following?(user) %>
-    <tr><td><%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete, class: "btn btn-primary" %></td></tr>
+    <tr>
+      <td><%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete, class: "btn btn-primary" %></td>
+      <% if user.following?(current_user) %>
+        <td><%= link_to "チャットを開始", chat_path(user.id), class: "ml-3" %></td>
+      <% end %>
+    </tr>
   <% else %>
     <tr><td><%= link_to "フォロー", user_relationships_path(user.id), method: :post, class: "btn btn-success" %></td></tr>
   <% end %>
